--- a/galeria/src/footer/Footer.css
+++ b/galeria/src/footer/Footer.css
@@ -1,25 +1,31 @@
-footer{
-    background-color: #000000;
-    color: white;
-    text-align: center;
-    box-shadow: 0px 0px 1px #ffffff;
+body{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100px;
 }
-.contatos{
+footer {
+    position: fixed; /* Adiciona a posição fixa */
+    bottom: 0; /* Define a posição no topo */
+    background-color: #000;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    height: 200px;
+    width: 100%;
+    align-items: center;
+    box-shadow: 0px 0px 1px #fff;
+    box-shadow: 0px 0px 1px #ffffff;
+    z-index: 1000;
+}
+
+.contatos {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 40px;
     margin: 10px;
 }
-.contatos i:hover{
-    color: red;
-}
-#contato-h1{
-    color: red;
-    font-size: 30px;
-}
-.footer-p{
-    font-size: 15px;
-    padding-right: 20px;
-    padding-left: 5px;
+
+.contatos i {
+    margin: 0 15px; /* Espaçamento entre os ícones */
 }
