--- a/galeria/src/home/Home.css
+++ b/galeria/src/home/Home.css
@@ -1,52 +1,31 @@
-/* src/index.css */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: white;
-  }
-  
-  .App {
-    text-align: center;
-  }
-  
-  /* src/Gallery.css */
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    padding: 20px;
-  }
-  
-  .image-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .image-container img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-  }
-  
-  .image-container a {
-    margin-top: 10px;
-    text-decoration: none;
-    color: #337ab7;
-  }
-  
-  /* src/Home.css */
-  .home {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .home h1 {
-    margin-bottom: 20px;
-  }
+body{
+  width: 100%;
+  height: 100vh;
+}
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  padding: 20px;
+}
+
+.gallery-item {
+  position: relative;
+  cursor: pointer;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+  border-radius: 5px;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.gallery-item:hover img {
+  box-shadow: 0px 0px 10px black;
+}
+button{
+  margin: 10px;
+}
