--- a/galeria/src/App.css
+++ b/galeria/src/App.css
@@ -1,30 +1,112 @@
 /* src/App.css */
+
+/* Estilo geral da aplicação */
 .App {
-  text-align: center;
-  font-family: Arial, sans-serif;
-  color: black;
-}
-.App h1{
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-left: 700px;
-  margin-bottom: 700px;
-  text-shadow: 0px 0px 2px red;
+  align-items: center;
+  height: 100vh; /* Altura total da viewport */
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  max-width: 1200px;
+  margin-left: 300px;
+  text-align: center; /* Centraliza o texto dentro do contêiner */
 }
+
+/* Estilo do título "LOREM IPSUM" */
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-left: 300px;
+  margin-bottom: 40px;
+  color: #fff;
+  text-align: center; /* Centraliza o texto */
+}
+
+/* Galeria de imagens */
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  margin: 20px;
+  gap: 20px;
+  justify-content: center;
 }
 
-.gallery-image {
+.gallery-item {
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-item img {
   width: 100%;
   height: auto;
-  border-radius: 5px;
-  transition: transform 0.2s;
+  display: block;
 }
 
-.gallery-image:hover {
+.gallery-item:hover {
   transform: scale(1.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
+
+/* Paginação */
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.pagination button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  margin: 0 5px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.pagination button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination button:hover:not(:disabled) {
+  background-color: #0056b3;
+}
+
+.pagination span {
+  font-size: 1.2rem;
+  margin: 0 15px;
+  font-weight: bold;
+}
+
+
+/* Detalhes da imagem */
+.detail {
+  text-align: center;
+  padding: 40px;
+}
+
+.detail img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  border: 3px solid #ccc;
+  border-radius: 10px;
+  
+}
+
+.detail p {
+  font-size: 1.2rem;
+  color: #555;
+}
+
+/* Ajuste para centralizar a galeria dentro da página */
+
+
