--- a/galeria/src/home/Home.css
+++ b/galeria/src/home/Home.css
@@ -1,10 +1,12 @@
-body{
+body {
   width: 100%;
-  height: 100vh;
+  height: 150vh;
+  align-items: center;
 }
+
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr); /* 3 colunas */
   gap: 10px;
   padding: 20px;
 }
@@ -24,8 +26,33 @@ body{
 }
 
 .gallery-item:hover img {
-  box-shadow: 0px 0px 10px black;
+  transform: scale(1.05); /* Zoom no hover */
+  box-shadow: 0px 0px 10px black; /* Sombra no hover */
 }
-button{
-  margin: 10px;
+
+/* Estilização dos botões de paginação */
+.pagination {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.pagination button {
+  padding: 10px 20px;
+  margin: 0 10px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.pagination button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.pagination span {
+  font-size: 1.2rem;
+  margin: 0 15px;
 }
