--- a/galeria/src/home/Home.css
+++ b/galeria/src/home/Home.css
@@ -1,8 +1,25 @@
 body {
   width: 100%;
-  height: 150vh;
+  height: 170vh;
   align-items: center;
 }
+/*scroll do site */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background-color: red;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(31, 31, 31);
+}
+::-webkit-scrollbar-thumb:horizontal {
+  background-color: #474747;
+}
+
+
 
 .gallery {
   display: grid;
